# Echo-Kernel

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  RELEASE_CHECKLIST.md  build_package.py  code_interpreter.py  config.py  example.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
echo_kernel/: EchoAgent.py  EchoKernel.py  EchoTool.py  IEchoAgent.py  IEchoTool.py  IEmbeddingProvider.py  ISearchProvider.py  IStorageProvider.py  ITextMemory.py  ITextProvider.py  Tool.py  __init__.py  cli.py
echo_kernel/agents/: CollaborativeAgent.py  LoopAgent.py  MemoryAgent.py  RouterAgent.py  SpecialistRouterAgent.py  TaskDecomposerAgent.py
echo_kernel/providers/: AzureOpenAIEmbeddingProvider.py  AzureOpenAITextProvider.py  BingSearchProvider.py  DuckDuckGoSearchProvider.py  GoogleSearchProvider.py  InMemoryStorageProvider.py  OpenAIImbeddingProvider.py  OpenAITextProvider.py  QdrantStorageProvider.py  VectorMemoryProvider.py
echo_kernel/tools/: CodeInterpreterTool.py  WebAccessTool.py  __init__.py  web_access.py
examples/: README.md  agent-logging-example.py  agent-routing-with-memory.py  agent-routing.py  collaborative-agent-example.py  example.py  task-decomposer.py  web-access-example.py  web-search-example.py
sandbox/: Dockerfile  entrypoint.sh
tests/: __init__.py  conftest.py  test_agents.py  test_echo_kernel.py  test_search_providers.py  test_tool.py  test_web_access.py
tools/: CodeInterpreterTool.py  WebAccessTool.py
