[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-kernel"
version = "0.1.10"
description = "A flexible and extensible Python framework for building AI-powered applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ronmenator", email = "ronnie@ronniebarnard.com"}
]
maintainers = [
    {name = "Ronmenator", email = "ronnie@ronniebarnard.com"}
]
keywords = ["ai", "llm", "openai", "azure", "agents", "framework", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.21.0",
    "qdrant-client>=1.7.0",
    "faiss-cpu>=1.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/Ronmenator/Echo-Py"
Documentation = "https://github.com/Ronmenator/Echo-Py#readme"
Repository = "https://github.com/Ronmenator/Echo-Py.git"
Issues = "https://github.com/Ronmenator/Echo-Py/issues"
Changelog = "https://github.com/Ronmenator/Echo-Py/blob/main/CHANGELOG.md"

[project.scripts]
echo-kernel = "echo_kernel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["echo_kernel*"]
exclude = ["tests*", "examples*", "sandbox*"]

[tool.setuptools.package-data]
echo_kernel = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "qdrant_client.*",
    "faiss.*",
]
ignore_missing_imports = true 